etapa5/y.output
   0  $accept : program $end

   1  program : globalseq

   2  globalseq :
   3            | globalseq dec

   4  dec : vardec
   5      | vetordec
   6      | fundec

   7  localdecseq :
   8              | localdecseq vardec

   9  comando : varassign
  10          | vetorassign
  11          | controlefluxo
  12          | input
  13          | output
  14          | return
  15          | blococomandos

  16  comandosseq :
  17              | ';'
  18              | comandosseq comando ';'

  19  blococomandos : '{' comandosseq '}'

  20  literal : LIT_INTEGER
  21          | LIT_FALSE
  22          | LIT_TRUE
  23          | LIT_CHAR
  24          | LIT_STRING

  25  litseq :
  26         | litseq literal

  27  tipos : KW_WORD
  28        | KW_BOOL
  29        | KW_BYTE

  30  controlefluxo : condif
  31                | loop

  32  vardec : tipos TK_IDENTIFIER ':' literal ';'
  33         | tipos '$' TK_IDENTIFIER ':' literal ';'

  34  vetordec : tipos TK_IDENTIFIER '[' LIT_INTEGER ']' ';'
  35           | tipos TK_IDENTIFIER '[' LIT_INTEGER ']' ':' litseq ';'

  36  varassign : TK_IDENTIFIER '=' expressao
  37            | '&' TK_IDENTIFIER '=' expressao
  38            | '*' TK_IDENTIFIER '=' expressao

  39  vetorassign : TK_IDENTIFIER '[' expressao ']' '=' expressao

  40  param : tipos TK_IDENTIFIER
  41        | tipos '$' TK_IDENTIFIER

  42  paramseq :
  43           | param
  44           | paramseq ',' param

  45  fundec : tipos TK_IDENTIFIER '(' paramseq ')' localdecseq blococomandos

  46  input : KW_INPUT TK_IDENTIFIER

  47  outputseq : expressao
  48            | outputseq ',' expressao

  49  output : KW_OUTPUT outputseq

  50  return : KW_RETURN expressao

  51  argseq :
  52         | expressao
  53         | argseq ',' expressao

  54  expressao : literal
  55            | TK_IDENTIFIER
  56            | TK_IDENTIFIER '[' expressao ']'
  57            | TK_IDENTIFIER '(' argseq ')'
  58            | '&' TK_IDENTIFIER
  59            | '*' TK_IDENTIFIER
  60            | '(' expressao ')'
  61            | expressao '-' expressao
  62            | expressao '+' expressao
  63            | expressao '*' expressao
  64            | expressao OPERATOR_LE expressao
  65            | expressao OPERATOR_GE expressao
  66            | expressao OPERATOR_EQ expressao
  67            | expressao OPERATOR_NE expressao
  68            | expressao OPERATOR_AND expressao
  69            | expressao OPERATOR_OR expressao
  70            | expressao '/' expressao
  71            | expressao '<' expressao
  72            | expressao '>' expressao

  73  condif : KW_IF '(' expressao ')' KW_THEN comando
  74         | KW_IF '(' expressao ')' KW_THEN comando KW_ELSE comando

  75  loop : KW_LOOP '(' expressao ')' comando

state 0
	$accept : . program $end  (0)
	globalseq : .  (2)

	.  reduce 2

	program  goto 1
	globalseq  goto 2


state 1
	$accept : program . $end  (0)

	$end  accept


state 2
	program : globalseq .  (1)
	globalseq : globalseq . dec  (3)

	KW_WORD  shift 3
	KW_BOOL  shift 4
	KW_BYTE  shift 5
	$end  reduce 1

	vetordec  goto 6
	vardec  goto 7
	fundec  goto 8
	tipos  goto 9
	dec  goto 10


state 3
	tipos : KW_WORD .  (27)

	.  reduce 27


state 4
	tipos : KW_BOOL .  (28)

	.  reduce 28


state 5
	tipos : KW_BYTE .  (29)

	.  reduce 29


state 6
	dec : vetordec .  (5)

	.  reduce 5


state 7
	dec : vardec .  (4)

	.  reduce 4


state 8
	dec : fundec .  (6)

	.  reduce 6


state 9
	vardec : tipos . TK_IDENTIFIER ':' literal ';'  (32)
	vardec : tipos . '$' TK_IDENTIFIER ':' literal ';'  (33)
	vetordec : tipos . TK_IDENTIFIER '[' LIT_INTEGER ']' ';'  (34)
	vetordec : tipos . TK_IDENTIFIER '[' LIT_INTEGER ']' ':' litseq ';'  (35)
	fundec : tipos . TK_IDENTIFIER '(' paramseq ')' localdecseq blococomandos  (45)

	TK_IDENTIFIER  shift 11
	'$'  shift 12
	.  error


state 10
	globalseq : globalseq dec .  (3)

	.  reduce 3


state 11
	vardec : tipos TK_IDENTIFIER . ':' literal ';'  (32)
	vetordec : tipos TK_IDENTIFIER . '[' LIT_INTEGER ']' ';'  (34)
	vetordec : tipos TK_IDENTIFIER . '[' LIT_INTEGER ']' ':' litseq ';'  (35)
	fundec : tipos TK_IDENTIFIER . '(' paramseq ')' localdecseq blococomandos  (45)

	':'  shift 13
	'['  shift 14
	'('  shift 15
	.  error


state 12
	vardec : tipos '$' . TK_IDENTIFIER ':' literal ';'  (33)

	TK_IDENTIFIER  shift 16
	.  error


state 13
	vardec : tipos TK_IDENTIFIER ':' . literal ';'  (32)

	LIT_INTEGER  shift 17
	LIT_FALSE  shift 18
	LIT_TRUE  shift 19
	LIT_CHAR  shift 20
	LIT_STRING  shift 21
	.  error

	literal  goto 22


state 14
	vetordec : tipos TK_IDENTIFIER '[' . LIT_INTEGER ']' ';'  (34)
	vetordec : tipos TK_IDENTIFIER '[' . LIT_INTEGER ']' ':' litseq ';'  (35)

	LIT_INTEGER  shift 23
	.  error


state 15
	fundec : tipos TK_IDENTIFIER '(' . paramseq ')' localdecseq blococomandos  (45)
	paramseq : .  (42)

	KW_WORD  shift 3
	KW_BOOL  shift 4
	KW_BYTE  shift 5
	','  reduce 42
	')'  reduce 42

	paramseq  goto 24
	tipos  goto 25
	param  goto 26


state 16
	vardec : tipos '$' TK_IDENTIFIER . ':' literal ';'  (33)

	':'  shift 27
	.  error


state 17
	literal : LIT_INTEGER .  (20)

	.  reduce 20


state 18
	literal : LIT_FALSE .  (21)

	.  reduce 21


state 19
	literal : LIT_TRUE .  (22)

	.  reduce 22


state 20
	literal : LIT_CHAR .  (23)

	.  reduce 23


state 21
	literal : LIT_STRING .  (24)

	.  reduce 24


state 22
	vardec : tipos TK_IDENTIFIER ':' literal . ';'  (32)

	';'  shift 28
	.  error


state 23
	vetordec : tipos TK_IDENTIFIER '[' LIT_INTEGER . ']' ';'  (34)
	vetordec : tipos TK_IDENTIFIER '[' LIT_INTEGER . ']' ':' litseq ';'  (35)

	']'  shift 29
	.  error


state 24
	paramseq : paramseq . ',' param  (44)
	fundec : tipos TK_IDENTIFIER '(' paramseq . ')' localdecseq blococomandos  (45)

	','  shift 30
	')'  shift 31
	.  error


state 25
	param : tipos . TK_IDENTIFIER  (40)
	param : tipos . '$' TK_IDENTIFIER  (41)

	TK_IDENTIFIER  shift 32
	'$'  shift 33
	.  error


state 26
	paramseq : param .  (43)

	.  reduce 43


state 27
	vardec : tipos '$' TK_IDENTIFIER ':' . literal ';'  (33)

	LIT_INTEGER  shift 17
	LIT_FALSE  shift 18
	LIT_TRUE  shift 19
	LIT_CHAR  shift 20
	LIT_STRING  shift 21
	.  error

	literal  goto 34


state 28
	vardec : tipos TK_IDENTIFIER ':' literal ';' .  (32)

	.  reduce 32


state 29
	vetordec : tipos TK_IDENTIFIER '[' LIT_INTEGER ']' . ';'  (34)
	vetordec : tipos TK_IDENTIFIER '[' LIT_INTEGER ']' . ':' litseq ';'  (35)

	';'  shift 35
	':'  shift 36
	.  error


state 30
	paramseq : paramseq ',' . param  (44)

	KW_WORD  shift 3
	KW_BOOL  shift 4
	KW_BYTE  shift 5
	.  error

	tipos  goto 25
	param  goto 37


state 31
	fundec : tipos TK_IDENTIFIER '(' paramseq ')' . localdecseq blococomandos  (45)
	localdecseq : .  (7)

	.  reduce 7

	localdecseq  goto 38


state 32
	param : tipos TK_IDENTIFIER .  (40)

	.  reduce 40


state 33
	param : tipos '$' . TK_IDENTIFIER  (41)

	TK_IDENTIFIER  shift 39
	.  error


state 34
	vardec : tipos '$' TK_IDENTIFIER ':' literal . ';'  (33)

	';'  shift 40
	.  error


state 35
	vetordec : tipos TK_IDENTIFIER '[' LIT_INTEGER ']' ';' .  (34)

	.  reduce 34


state 36
	vetordec : tipos TK_IDENTIFIER '[' LIT_INTEGER ']' ':' . litseq ';'  (35)
	litseq : .  (25)

	.  reduce 25

	litseq  goto 41


state 37
	paramseq : paramseq ',' param .  (44)

	.  reduce 44


state 38
	localdecseq : localdecseq . vardec  (8)
	fundec : tipos TK_IDENTIFIER '(' paramseq ')' localdecseq . blococomandos  (45)

	KW_WORD  shift 3
	KW_BOOL  shift 4
	KW_BYTE  shift 5
	'{'  shift 42
	.  error

	blococomandos  goto 43
	vardec  goto 44
	tipos  goto 45


state 39
	param : tipos '$' TK_IDENTIFIER .  (41)

	.  reduce 41


state 40
	vardec : tipos '$' TK_IDENTIFIER ':' literal ';' .  (33)

	.  reduce 33


state 41
	litseq : litseq . literal  (26)
	vetordec : tipos TK_IDENTIFIER '[' LIT_INTEGER ']' ':' litseq . ';'  (35)

	LIT_INTEGER  shift 17
	LIT_FALSE  shift 18
	LIT_TRUE  shift 19
	LIT_CHAR  shift 20
	LIT_STRING  shift 21
	';'  shift 46
	.  error

	literal  goto 47


state 42
	blococomandos : '{' . comandosseq '}'  (19)
	comandosseq : .  (16)

	';'  shift 48
	KW_IF  reduce 16
	KW_LOOP  reduce 16
	KW_INPUT  reduce 16
	KW_RETURN  reduce 16
	KW_OUTPUT  reduce 16
	TK_IDENTIFIER  reduce 16
	'&'  reduce 16
	'*'  reduce 16
	'{'  reduce 16
	'}'  reduce 16

	comandosseq  goto 49


state 43
	fundec : tipos TK_IDENTIFIER '(' paramseq ')' localdecseq blococomandos .  (45)

	.  reduce 45


state 44
	localdecseq : localdecseq vardec .  (8)

	.  reduce 8


state 45
	vardec : tipos . TK_IDENTIFIER ':' literal ';'  (32)
	vardec : tipos . '$' TK_IDENTIFIER ':' literal ';'  (33)

	TK_IDENTIFIER  shift 50
	'$'  shift 12
	.  error


state 46
	vetordec : tipos TK_IDENTIFIER '[' LIT_INTEGER ']' ':' litseq ';' .  (35)

	.  reduce 35


state 47
	litseq : litseq literal .  (26)

	.  reduce 26


state 48
	comandosseq : ';' .  (17)

	.  reduce 17


state 49
	comandosseq : comandosseq . comando ';'  (18)
	blococomandos : '{' comandosseq . '}'  (19)

	KW_IF  shift 51
	KW_LOOP  shift 52
	KW_INPUT  shift 53
	KW_RETURN  shift 54
	KW_OUTPUT  shift 55
	TK_IDENTIFIER  shift 56
	'&'  shift 57
	'*'  shift 58
	'{'  shift 42
	'}'  shift 59
	.  error

	comando  goto 60
	blococomandos  goto 61
	varassign  goto 62
	vetorassign  goto 63
	controlefluxo  goto 64
	input  goto 65
	output  goto 66
	return  goto 67
	condif  goto 68
	loop  goto 69


state 50
	vardec : tipos TK_IDENTIFIER . ':' literal ';'  (32)

	':'  shift 13
	.  error


state 51
	condif : KW_IF . '(' expressao ')' KW_THEN comando  (73)
	condif : KW_IF . '(' expressao ')' KW_THEN comando KW_ELSE comando  (74)

	'('  shift 70
	.  error


state 52
	loop : KW_LOOP . '(' expressao ')' comando  (75)

	'('  shift 71
	.  error


state 53
	input : KW_INPUT . TK_IDENTIFIER  (46)

	TK_IDENTIFIER  shift 72
	.  error


state 54
	return : KW_RETURN . expressao  (50)

	LIT_INTEGER  shift 17
	LIT_FALSE  shift 18
	LIT_TRUE  shift 19
	LIT_CHAR  shift 20
	LIT_STRING  shift 21
	TK_IDENTIFIER  shift 73
	'&'  shift 74
	'*'  shift 75
	'('  shift 76
	.  error

	literal  goto 77
	expressao  goto 78


state 55
	output : KW_OUTPUT . outputseq  (49)

	LIT_INTEGER  shift 17
	LIT_FALSE  shift 18
	LIT_TRUE  shift 19
	LIT_CHAR  shift 20
	LIT_STRING  shift 21
	TK_IDENTIFIER  shift 73
	'&'  shift 74
	'*'  shift 75
	'('  shift 76
	.  error

	literal  goto 77
	expressao  goto 79
	outputseq  goto 80


state 56
	varassign : TK_IDENTIFIER . '=' expressao  (36)
	vetorassign : TK_IDENTIFIER . '[' expressao ']' '=' expressao  (39)

	'['  shift 81
	'='  shift 82
	.  error


state 57
	varassign : '&' . TK_IDENTIFIER '=' expressao  (37)

	TK_IDENTIFIER  shift 83
	.  error


state 58
	varassign : '*' . TK_IDENTIFIER '=' expressao  (38)

	TK_IDENTIFIER  shift 84
	.  error


state 59
	blococomandos : '{' comandosseq '}' .  (19)

	.  reduce 19


state 60
	comandosseq : comandosseq comando . ';'  (18)

	';'  shift 85
	.  error


state 61
	comando : blococomandos .  (15)

	.  reduce 15


state 62
	comando : varassign .  (9)

	.  reduce 9


state 63
	comando : vetorassign .  (10)

	.  reduce 10


state 64
	comando : controlefluxo .  (11)

	.  reduce 11


state 65
	comando : input .  (12)

	.  reduce 12


state 66
	comando : output .  (13)

	.  reduce 13


state 67
	comando : return .  (14)

	.  reduce 14


state 68
	controlefluxo : condif .  (30)

	.  reduce 30


state 69
	controlefluxo : loop .  (31)

	.  reduce 31


state 70
	condif : KW_IF '(' . expressao ')' KW_THEN comando  (73)
	condif : KW_IF '(' . expressao ')' KW_THEN comando KW_ELSE comando  (74)

	LIT_INTEGER  shift 17
	LIT_FALSE  shift 18
	LIT_TRUE  shift 19
	LIT_CHAR  shift 20
	LIT_STRING  shift 21
	TK_IDENTIFIER  shift 73
	'&'  shift 74
	'*'  shift 75
	'('  shift 76
	.  error

	literal  goto 77
	expressao  goto 86


state 71
	loop : KW_LOOP '(' . expressao ')' comando  (75)

	LIT_INTEGER  shift 17
	LIT_FALSE  shift 18
	LIT_TRUE  shift 19
	LIT_CHAR  shift 20
	LIT_STRING  shift 21
	TK_IDENTIFIER  shift 73
	'&'  shift 74
	'*'  shift 75
	'('  shift 76
	.  error

	literal  goto 77
	expressao  goto 87


state 72
	input : KW_INPUT TK_IDENTIFIER .  (46)

	.  reduce 46


state 73
	expressao : TK_IDENTIFIER .  (55)
	expressao : TK_IDENTIFIER . '[' expressao ']'  (56)
	expressao : TK_IDENTIFIER . '(' argseq ')'  (57)

	'['  shift 88
	'('  shift 89
	KW_ELSE  reduce 55
	OPERATOR_LE  reduce 55
	OPERATOR_GE  reduce 55
	OPERATOR_EQ  reduce 55
	OPERATOR_NE  reduce 55
	OPERATOR_AND  reduce 55
	OPERATOR_OR  reduce 55
	'<'  reduce 55
	'>'  reduce 55
	'+'  reduce 55
	'-'  reduce 55
	'*'  reduce 55
	'/'  reduce 55
	';'  reduce 55
	']'  reduce 55
	','  reduce 55
	')'  reduce 55


state 74
	expressao : '&' . TK_IDENTIFIER  (58)

	TK_IDENTIFIER  shift 90
	.  error


state 75
	expressao : '*' . TK_IDENTIFIER  (59)

	TK_IDENTIFIER  shift 91
	.  error


state 76
	expressao : '(' . expressao ')'  (60)

	LIT_INTEGER  shift 17
	LIT_FALSE  shift 18
	LIT_TRUE  shift 19
	LIT_CHAR  shift 20
	LIT_STRING  shift 21
	TK_IDENTIFIER  shift 73
	'&'  shift 74
	'*'  shift 75
	'('  shift 76
	.  error

	literal  goto 77
	expressao  goto 92


state 77
	expressao : literal .  (54)

	.  reduce 54


state 78
	return : KW_RETURN expressao .  (50)
	expressao : expressao . '-' expressao  (61)
	expressao : expressao . '+' expressao  (62)
	expressao : expressao . '*' expressao  (63)
	expressao : expressao . OPERATOR_LE expressao  (64)
	expressao : expressao . OPERATOR_GE expressao  (65)
	expressao : expressao . OPERATOR_EQ expressao  (66)
	expressao : expressao . OPERATOR_NE expressao  (67)
	expressao : expressao . OPERATOR_AND expressao  (68)
	expressao : expressao . OPERATOR_OR expressao  (69)
	expressao : expressao . '/' expressao  (70)
	expressao : expressao . '<' expressao  (71)
	expressao : expressao . '>' expressao  (72)

	OPERATOR_LE  shift 93
	OPERATOR_GE  shift 94
	OPERATOR_EQ  shift 95
	OPERATOR_NE  shift 96
	OPERATOR_AND  shift 97
	OPERATOR_OR  shift 98
	'<'  shift 99
	'>'  shift 100
	'+'  shift 101
	'-'  shift 102
	'*'  shift 103
	'/'  shift 104
	KW_ELSE  reduce 50
	';'  reduce 50


state 79
	outputseq : expressao .  (47)
	expressao : expressao . '-' expressao  (61)
	expressao : expressao . '+' expressao  (62)
	expressao : expressao . '*' expressao  (63)
	expressao : expressao . OPERATOR_LE expressao  (64)
	expressao : expressao . OPERATOR_GE expressao  (65)
	expressao : expressao . OPERATOR_EQ expressao  (66)
	expressao : expressao . OPERATOR_NE expressao  (67)
	expressao : expressao . OPERATOR_AND expressao  (68)
	expressao : expressao . OPERATOR_OR expressao  (69)
	expressao : expressao . '/' expressao  (70)
	expressao : expressao . '<' expressao  (71)
	expressao : expressao . '>' expressao  (72)

	OPERATOR_LE  shift 93
	OPERATOR_GE  shift 94
	OPERATOR_EQ  shift 95
	OPERATOR_NE  shift 96
	OPERATOR_AND  shift 97
	OPERATOR_OR  shift 98
	'<'  shift 99
	'>'  shift 100
	'+'  shift 101
	'-'  shift 102
	'*'  shift 103
	'/'  shift 104
	KW_ELSE  reduce 47
	';'  reduce 47
	','  reduce 47


state 80
	outputseq : outputseq . ',' expressao  (48)
	output : KW_OUTPUT outputseq .  (49)

	','  shift 105
	KW_ELSE  reduce 49
	';'  reduce 49


state 81
	vetorassign : TK_IDENTIFIER '[' . expressao ']' '=' expressao  (39)

	LIT_INTEGER  shift 17
	LIT_FALSE  shift 18
	LIT_TRUE  shift 19
	LIT_CHAR  shift 20
	LIT_STRING  shift 21
	TK_IDENTIFIER  shift 73
	'&'  shift 74
	'*'  shift 75
	'('  shift 76
	.  error

	literal  goto 77
	expressao  goto 106


state 82
	varassign : TK_IDENTIFIER '=' . expressao  (36)

	LIT_INTEGER  shift 17
	LIT_FALSE  shift 18
	LIT_TRUE  shift 19
	LIT_CHAR  shift 20
	LIT_STRING  shift 21
	TK_IDENTIFIER  shift 73
	'&'  shift 74
	'*'  shift 75
	'('  shift 76
	.  error

	literal  goto 77
	expressao  goto 107


state 83
	varassign : '&' TK_IDENTIFIER . '=' expressao  (37)

	'='  shift 108
	.  error


state 84
	varassign : '*' TK_IDENTIFIER . '=' expressao  (38)

	'='  shift 109
	.  error


state 85
	comandosseq : comandosseq comando ';' .  (18)

	.  reduce 18


state 86
	expressao : expressao . '-' expressao  (61)
	expressao : expressao . '+' expressao  (62)
	expressao : expressao . '*' expressao  (63)
	expressao : expressao . OPERATOR_LE expressao  (64)
	expressao : expressao . OPERATOR_GE expressao  (65)
	expressao : expressao . OPERATOR_EQ expressao  (66)
	expressao : expressao . OPERATOR_NE expressao  (67)
	expressao : expressao . OPERATOR_AND expressao  (68)
	expressao : expressao . OPERATOR_OR expressao  (69)
	expressao : expressao . '/' expressao  (70)
	expressao : expressao . '<' expressao  (71)
	expressao : expressao . '>' expressao  (72)
	condif : KW_IF '(' expressao . ')' KW_THEN comando  (73)
	condif : KW_IF '(' expressao . ')' KW_THEN comando KW_ELSE comando  (74)

	OPERATOR_LE  shift 93
	OPERATOR_GE  shift 94
	OPERATOR_EQ  shift 95
	OPERATOR_NE  shift 96
	OPERATOR_AND  shift 97
	OPERATOR_OR  shift 98
	'<'  shift 99
	'>'  shift 100
	'+'  shift 101
	'-'  shift 102
	'*'  shift 103
	'/'  shift 104
	')'  shift 110
	.  error


state 87
	expressao : expressao . '-' expressao  (61)
	expressao : expressao . '+' expressao  (62)
	expressao : expressao . '*' expressao  (63)
	expressao : expressao . OPERATOR_LE expressao  (64)
	expressao : expressao . OPERATOR_GE expressao  (65)
	expressao : expressao . OPERATOR_EQ expressao  (66)
	expressao : expressao . OPERATOR_NE expressao  (67)
	expressao : expressao . OPERATOR_AND expressao  (68)
	expressao : expressao . OPERATOR_OR expressao  (69)
	expressao : expressao . '/' expressao  (70)
	expressao : expressao . '<' expressao  (71)
	expressao : expressao . '>' expressao  (72)
	loop : KW_LOOP '(' expressao . ')' comando  (75)

	OPERATOR_LE  shift 93
	OPERATOR_GE  shift 94
	OPERATOR_EQ  shift 95
	OPERATOR_NE  shift 96
	OPERATOR_AND  shift 97
	OPERATOR_OR  shift 98
	'<'  shift 99
	'>'  shift 100
	'+'  shift 101
	'-'  shift 102
	'*'  shift 103
	'/'  shift 104
	')'  shift 111
	.  error


state 88
	expressao : TK_IDENTIFIER '[' . expressao ']'  (56)

	LIT_INTEGER  shift 17
	LIT_FALSE  shift 18
	LIT_TRUE  shift 19
	LIT_CHAR  shift 20
	LIT_STRING  shift 21
	TK_IDENTIFIER  shift 73
	'&'  shift 74
	'*'  shift 75
	'('  shift 76
	.  error

	literal  goto 77
	expressao  goto 112


state 89
	expressao : TK_IDENTIFIER '(' . argseq ')'  (57)
	argseq : .  (51)

	LIT_INTEGER  shift 17
	LIT_FALSE  shift 18
	LIT_TRUE  shift 19
	LIT_CHAR  shift 20
	LIT_STRING  shift 21
	TK_IDENTIFIER  shift 73
	'&'  shift 74
	'*'  shift 75
	'('  shift 76
	','  reduce 51
	')'  reduce 51

	literal  goto 77
	expressao  goto 113
	argseq  goto 114


state 90
	expressao : '&' TK_IDENTIFIER .  (58)

	.  reduce 58


state 91
	expressao : '*' TK_IDENTIFIER .  (59)

	.  reduce 59


state 92
	expressao : '(' expressao . ')'  (60)
	expressao : expressao . '-' expressao  (61)
	expressao : expressao . '+' expressao  (62)
	expressao : expressao . '*' expressao  (63)
	expressao : expressao . OPERATOR_LE expressao  (64)
	expressao : expressao . OPERATOR_GE expressao  (65)
	expressao : expressao . OPERATOR_EQ expressao  (66)
	expressao : expressao . OPERATOR_NE expressao  (67)
	expressao : expressao . OPERATOR_AND expressao  (68)
	expressao : expressao . OPERATOR_OR expressao  (69)
	expressao : expressao . '/' expressao  (70)
	expressao : expressao . '<' expressao  (71)
	expressao : expressao . '>' expressao  (72)

	OPERATOR_LE  shift 93
	OPERATOR_GE  shift 94
	OPERATOR_EQ  shift 95
	OPERATOR_NE  shift 96
	OPERATOR_AND  shift 97
	OPERATOR_OR  shift 98
	'<'  shift 99
	'>'  shift 100
	'+'  shift 101
	'-'  shift 102
	'*'  shift 103
	'/'  shift 104
	')'  shift 115
	.  error


state 93
	expressao : expressao OPERATOR_LE . expressao  (64)

	LIT_INTEGER  shift 17
	LIT_FALSE  shift 18
	LIT_TRUE  shift 19
	LIT_CHAR  shift 20
	LIT_STRING  shift 21
	TK_IDENTIFIER  shift 73
	'&'  shift 74
	'*'  shift 75
	'('  shift 76
	.  error

	literal  goto 77
	expressao  goto 116


state 94
	expressao : expressao OPERATOR_GE . expressao  (65)

	LIT_INTEGER  shift 17
	LIT_FALSE  shift 18
	LIT_TRUE  shift 19
	LIT_CHAR  shift 20
	LIT_STRING  shift 21
	TK_IDENTIFIER  shift 73
	'&'  shift 74
	'*'  shift 75
	'('  shift 76
	.  error

	literal  goto 77
	expressao  goto 117


state 95
	expressao : expressao OPERATOR_EQ . expressao  (66)

	LIT_INTEGER  shift 17
	LIT_FALSE  shift 18
	LIT_TRUE  shift 19
	LIT_CHAR  shift 20
	LIT_STRING  shift 21
	TK_IDENTIFIER  shift 73
	'&'  shift 74
	'*'  shift 75
	'('  shift 76
	.  error

	literal  goto 77
	expressao  goto 118


state 96
	expressao : expressao OPERATOR_NE . expressao  (67)

	LIT_INTEGER  shift 17
	LIT_FALSE  shift 18
	LIT_TRUE  shift 19
	LIT_CHAR  shift 20
	LIT_STRING  shift 21
	TK_IDENTIFIER  shift 73
	'&'  shift 74
	'*'  shift 75
	'('  shift 76
	.  error

	literal  goto 77
	expressao  goto 119


state 97
	expressao : expressao OPERATOR_AND . expressao  (68)

	LIT_INTEGER  shift 17
	LIT_FALSE  shift 18
	LIT_TRUE  shift 19
	LIT_CHAR  shift 20
	LIT_STRING  shift 21
	TK_IDENTIFIER  shift 73
	'&'  shift 74
	'*'  shift 75
	'('  shift 76
	.  error

	literal  goto 77
	expressao  goto 120


state 98
	expressao : expressao OPERATOR_OR . expressao  (69)

	LIT_INTEGER  shift 17
	LIT_FALSE  shift 18
	LIT_TRUE  shift 19
	LIT_CHAR  shift 20
	LIT_STRING  shift 21
	TK_IDENTIFIER  shift 73
	'&'  shift 74
	'*'  shift 75
	'('  shift 76
	.  error

	literal  goto 77
	expressao  goto 121


state 99
	expressao : expressao '<' . expressao  (71)

	LIT_INTEGER  shift 17
	LIT_FALSE  shift 18
	LIT_TRUE  shift 19
	LIT_CHAR  shift 20
	LIT_STRING  shift 21
	TK_IDENTIFIER  shift 73
	'&'  shift 74
	'*'  shift 75
	'('  shift 76
	.  error

	literal  goto 77
	expressao  goto 122


state 100
	expressao : expressao '>' . expressao  (72)

	LIT_INTEGER  shift 17
	LIT_FALSE  shift 18
	LIT_TRUE  shift 19
	LIT_CHAR  shift 20
	LIT_STRING  shift 21
	TK_IDENTIFIER  shift 73
	'&'  shift 74
	'*'  shift 75
	'('  shift 76
	.  error

	literal  goto 77
	expressao  goto 123


state 101
	expressao : expressao '+' . expressao  (62)

	LIT_INTEGER  shift 17
	LIT_FALSE  shift 18
	LIT_TRUE  shift 19
	LIT_CHAR  shift 20
	LIT_STRING  shift 21
	TK_IDENTIFIER  shift 73
	'&'  shift 74
	'*'  shift 75
	'('  shift 76
	.  error

	literal  goto 77
	expressao  goto 124


state 102
	expressao : expressao '-' . expressao  (61)

	LIT_INTEGER  shift 17
	LIT_FALSE  shift 18
	LIT_TRUE  shift 19
	LIT_CHAR  shift 20
	LIT_STRING  shift 21
	TK_IDENTIFIER  shift 73
	'&'  shift 74
	'*'  shift 75
	'('  shift 76
	.  error

	literal  goto 77
	expressao  goto 125


state 103
	expressao : expressao '*' . expressao  (63)

	LIT_INTEGER  shift 17
	LIT_FALSE  shift 18
	LIT_TRUE  shift 19
	LIT_CHAR  shift 20
	LIT_STRING  shift 21
	TK_IDENTIFIER  shift 73
	'&'  shift 74
	'*'  shift 75
	'('  shift 76
	.  error

	literal  goto 77
	expressao  goto 126


state 104
	expressao : expressao '/' . expressao  (70)

	LIT_INTEGER  shift 17
	LIT_FALSE  shift 18
	LIT_TRUE  shift 19
	LIT_CHAR  shift 20
	LIT_STRING  shift 21
	TK_IDENTIFIER  shift 73
	'&'  shift 74
	'*'  shift 75
	'('  shift 76
	.  error

	literal  goto 77
	expressao  goto 127


state 105
	outputseq : outputseq ',' . expressao  (48)

	LIT_INTEGER  shift 17
	LIT_FALSE  shift 18
	LIT_TRUE  shift 19
	LIT_CHAR  shift 20
	LIT_STRING  shift 21
	TK_IDENTIFIER  shift 73
	'&'  shift 74
	'*'  shift 75
	'('  shift 76
	.  error

	literal  goto 77
	expressao  goto 128


state 106
	vetorassign : TK_IDENTIFIER '[' expressao . ']' '=' expressao  (39)
	expressao : expressao . '-' expressao  (61)
	expressao : expressao . '+' expressao  (62)
	expressao : expressao . '*' expressao  (63)
	expressao : expressao . OPERATOR_LE expressao  (64)
	expressao : expressao . OPERATOR_GE expressao  (65)
	expressao : expressao . OPERATOR_EQ expressao  (66)
	expressao : expressao . OPERATOR_NE expressao  (67)
	expressao : expressao . OPERATOR_AND expressao  (68)
	expressao : expressao . OPERATOR_OR expressao  (69)
	expressao : expressao . '/' expressao  (70)
	expressao : expressao . '<' expressao  (71)
	expressao : expressao . '>' expressao  (72)

	OPERATOR_LE  shift 93
	OPERATOR_GE  shift 94
	OPERATOR_EQ  shift 95
	OPERATOR_NE  shift 96
	OPERATOR_AND  shift 97
	OPERATOR_OR  shift 98
	'<'  shift 99
	'>'  shift 100
	'+'  shift 101
	'-'  shift 102
	'*'  shift 103
	'/'  shift 104
	']'  shift 129
	.  error


state 107
	varassign : TK_IDENTIFIER '=' expressao .  (36)
	expressao : expressao . '-' expressao  (61)
	expressao : expressao . '+' expressao  (62)
	expressao : expressao . '*' expressao  (63)
	expressao : expressao . OPERATOR_LE expressao  (64)
	expressao : expressao . OPERATOR_GE expressao  (65)
	expressao : expressao . OPERATOR_EQ expressao  (66)
	expressao : expressao . OPERATOR_NE expressao  (67)
	expressao : expressao . OPERATOR_AND expressao  (68)
	expressao : expressao . OPERATOR_OR expressao  (69)
	expressao : expressao . '/' expressao  (70)
	expressao : expressao . '<' expressao  (71)
	expressao : expressao . '>' expressao  (72)

	OPERATOR_LE  shift 93
	OPERATOR_GE  shift 94
	OPERATOR_EQ  shift 95
	OPERATOR_NE  shift 96
	OPERATOR_AND  shift 97
	OPERATOR_OR  shift 98
	'<'  shift 99
	'>'  shift 100
	'+'  shift 101
	'-'  shift 102
	'*'  shift 103
	'/'  shift 104
	KW_ELSE  reduce 36
	';'  reduce 36


state 108
	varassign : '&' TK_IDENTIFIER '=' . expressao  (37)

	LIT_INTEGER  shift 17
	LIT_FALSE  shift 18
	LIT_TRUE  shift 19
	LIT_CHAR  shift 20
	LIT_STRING  shift 21
	TK_IDENTIFIER  shift 73
	'&'  shift 74
	'*'  shift 75
	'('  shift 76
	.  error

	literal  goto 77
	expressao  goto 130


state 109
	varassign : '*' TK_IDENTIFIER '=' . expressao  (38)

	LIT_INTEGER  shift 17
	LIT_FALSE  shift 18
	LIT_TRUE  shift 19
	LIT_CHAR  shift 20
	LIT_STRING  shift 21
	TK_IDENTIFIER  shift 73
	'&'  shift 74
	'*'  shift 75
	'('  shift 76
	.  error

	literal  goto 77
	expressao  goto 131


state 110
	condif : KW_IF '(' expressao ')' . KW_THEN comando  (73)
	condif : KW_IF '(' expressao ')' . KW_THEN comando KW_ELSE comando  (74)

	KW_THEN  shift 132
	.  error


state 111
	loop : KW_LOOP '(' expressao ')' . comando  (75)

	KW_IF  shift 51
	KW_LOOP  shift 52
	KW_INPUT  shift 53
	KW_RETURN  shift 54
	KW_OUTPUT  shift 55
	TK_IDENTIFIER  shift 56
	'&'  shift 57
	'*'  shift 58
	'{'  shift 42
	.  error

	comando  goto 133
	blococomandos  goto 61
	varassign  goto 62
	vetorassign  goto 63
	controlefluxo  goto 64
	input  goto 65
	output  goto 66
	return  goto 67
	condif  goto 68
	loop  goto 69

